http://localhost:8003/testLock 测试分布式锁接口成功? √

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>service</module>
         <module>web</module>
         <module>service-client</module>
+        <module>service/service-test</module>
     </modules>
 
     <parent>
