--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>web</module>
         <module>service-client</module>
         <module>service/service-test</module>
+        <module>service/service-list</module>
     </modules>
 
     <parent>
