--- a/service/service-product/src/main/resources/application.properties
+++ b/service/service-product/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.application.name=service-product
 spring.redis.host=192.168.200.128
 spring.redis.port=6379
 spring.redis.database=0
+#feign \u8D85\u65F6
+feign.client.config.default.connectTimeout=600000
+feign.client.config.default.readTimeout=600000
