--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>service-product</module>
         <module>service-item</module>
+        <module>service-test</module>
+        <module>service-list</module>
     </modules>
 
 
