--- a/service/service-list/src/main/resources/application.properties
+++ b/service/service-list/src/main/resources/application.properties
@@ -1,24 +1,18 @@
 server.port=8203
-
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.200.128:3306/gmall_product?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-
 mybatis-plus.mapper-locations=mapper/*Mapper.xml
-
 #nacos
 spring.cloud.nacos.discovery.server-addr=192.168.200.128:8848
 spring.application.name=service-list
-
-#feign\u8BBF\u95EE\u8D85\u65F6\u65F6\u95F4
+#feign\uFFFD\uFFFD\uFFFD\u02B3\uFFFD\u02B1\u02B1\uFFFD\uFFFD
 feign.client.config.default.connectTimeout=600000
 feign.client.config.default.readTimeout=600000
-
 #redis
 spring.redis.host=192.168.200.128
 spring.redis.port=6379
 spring.redis.database=0
-
 #es
 spring.elasticsearch.rest.uris=http://192.168.200.128:9200
