--- a/service/service-product/src/main/resources/application.properties
+++ b/service/service-product/src/main/resources/application.properties
@@ -7,10 +7,10 @@ mybatis-plus.mapper-locations=mapper/*Mapper.xml
 #nacos
 spring.cloud.nacos.discovery.server-addr=192.168.200.128:8848
 spring.application.name=service-product
-#rediis
+#redis
 spring.redis.host=192.168.200.128
 spring.redis.port=6379
 spring.redis.database=0
-#feign \u8D85\u65F6
+#feign\uFFFD\uFFFD\u02B1
 feign.client.config.default.connectTimeout=600000
 feign.client.config.default.readTimeout=600000
