--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>service-client</module>
         <module>service/service-test</module>
         <module>service/service-list</module>
+        <module>server-gateway</module>
     </modules>
 
     <parent>
