0803--->单点登录-- 未知成功与否--因为mini好菜

--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -15,6 +15,7 @@
         <module>service-item-client</module>
         <module>service-product-client</module>
         <module>service-list-client</module>
+        <module>service-user-client</module>
     </modules>
 
 
@@ -29,12 +30,6 @@
             <groupId>com.atguigu.gmall</groupId>
             <artifactId>model</artifactId>
             <version>1.0</version>
-        </dependency>
-
-        <!-- 服务调用feign -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
 
