--- a/common/common-util/pom.xml
+++ b/common/common-util/pom.xml
@@ -31,6 +31,14 @@
             <version>1.2.29</version>
         </dependency>
 
+        <!-- 服务调用feign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 
 </project>
