--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,6 +16,7 @@
         <module>service-item</module>
         <module>service-test</module>
         <module>service-list</module>
+        <module>service-user</module>
     </modules>
 
 
