--- a/service/service-user/src/main/resources/application.properties
+++ b/service/service-user/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8201
+server.port=8208
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.200.128:3306/gmall_product?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.200.128:3306/gmall_user?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -9,7 +9,7 @@ mybatis-plus.mapper-locations=mapper/*Mapper.xml
 
 #nacos
 spring.cloud.nacos.discovery.server-addr=192.168.200.128:8848
-spring.application.name=service-product
+spring.application.name=service-user
 
 #redis
 spring.redis.host=192.168.200.128
