--- a/service/service-user/pom.xml
+++ b/service/service-user/pom.xml
@@ -12,5 +12,12 @@
     <artifactId>service-user</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>service-cart-client</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
