--- a/service/pom.xml
+++ b/service/pom.xml
@@ -17,6 +17,9 @@
         <module>service-test</module>
         <module>service-list</module>
         <module>service-user</module>
+        <module>service-cart</module>
+        <module>service-order</module>
+        <module>service-payment</module>
     </modules>
 
 
